<resources>
    <string name="app_name">UartBridge</string>
    <string name="action_settings">Settings</string>
    <string name="data_monitor_label">Data Monitor</string>
    <string name="enable_monitor_label">Enable Monitor Display</string>
    <string name="send_output_text">Send To Serial Port</string>

    <!-- Aka User Settings -->
    <string name="title_network_port_preference">Port</string>
    <string name="title_usb_speed_preference">Baud Rate</string>
    <string name="title_usb_dev_filter">USB device name filter</string>

    <string name="summary_network_port_preference">Network Port this app sends out serial data on</string>
    <string name="summary_usb_speed_preference">Speed for USB Uart in bps</string>
    <string name="summary_usb_dev_filter">USB device name filter (instr)</string>

    <string name="pref_category_usb_title">USB UART</string>
    <string name="pref_category_network_title">Network</string>
    <string name="pref_category_system_title">System</string>
    
    



    <!-- Pref keys -->
    
    <string translatable="false" name="pref_category_usb_key">usb_category_key</string>
    <string translatable="false" name="pref_category_network_key">network_category_key</string>
    <string translatable="false" name="pref_category_system_title_key">system_category_key</string>
    
    <string translatable="false" name="network_port_preference">pref_network_port</string>
    <string translatable="false" name="usb_speed_preference">pref_usb_speed</string>
    <string translatable="false" name="usb_dev_filter_preference">usb_dev_filter</string>
    <string translatable="false" name="start_on_boot_preference">start_on_boot</string>
    
    
    <string translatable="false" name="port_default">4353</string>
    <string translatable="false" name="usb_speed_default">9600</string>
    <string translatable="false" name="usb_dev_filter_default">serial</string>
    
    <string name="notification_message">Running</string>
    <string name="stop_app">STOP !</string>
    <string name="send">Send</string>
    <string name="text_to_send_hint">Text to send to device</string>
    <string name="status">Status</string>
</resources>
