<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory
        android:key="@string/pref_category_network_key"
        android:textColor="#00796B"
        android:title="@string/pref_category_network_title">

        <com.manichord.uartbridge.IntEditTextPreference
            android:defaultValue="@string/port_default"
            android:key="@string/network_port_preference"
            android:summary="@string/summary_network_port_preference"
            android:title="@string/title_network_port_preference" 
            android:inputType="number"
            android:numeric="integer" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_usb_title"
        android:key="@string/pref_category_usb_key" >

        <com.manichord.uartbridge.IntEditTextPreference
            android:key="@string/usb_speed_preference"
            android:title="@string/title_usb_speed_preference"
            android:defaultValue="@string/usb_speed_default"
            android:summary="@string/summary_usb_speed_preference" 
            android:numeric="integer" 
            android:inputType="numberDecimal" />
            
            <EditTextPreference
            android:key="@string/usb_dev_filter_preference"
            android:title="@string/title_usb_dev_filter"
            android:defaultValue="@string/usb_dev_filter_default"
            android:summary="@string/summary_usb_dev_filter" />

    </PreferenceCategory>

    <PreferenceCategory
    android:title="@string/pref_category_system_title"
    android:key="@string/pref_category_system_title_key" >

    <CheckBoxPreference
        android:key="@string/start_on_boot_preference"
        android:defaultValue="false"
        android:summary="Start App on boot" />
        

</PreferenceCategory>
</PreferenceScreen>
