<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:focusable="true"
    tools:context="com.manichord.uartbridge.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_output_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
       
    </TextView>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">


         <EditText
            android:id="@+id/outputSendText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="12"
            android:hint="@string/text_to_send_hint"
            android:minHeight="48dp"
            android:singleLine="true"
            android:focusable="true"
            android:nextFocusDown="@+id/checkBoxMonitor"
         >
         <requestFocus />
        </EditText> 

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/send"
            tools:ignore="TouchTargetSizeCheck"
            android:focusable="true" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_monitor_label"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/outputMonitor"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textColor="@android:color/primary_text_dark" />

    <CheckBox
        android:id="@+id/checkBoxMonitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:onClick="toggleMonitor"
        android:text="@string/enable_monitor_label"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" 
        android:focusable="true"
        android:nextFocusUp="@+id/outputSendText"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="showSettings"
        android:text="@string/action_settings" 
        android:focusable="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="stopServiceAndFinish"
        android:text="@string/stop_app"
        android:focusable="true"/>


        <!-- android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorAccent"
        android:onClick="stopServiceAndFinish"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/stop_app"
        android:textColor="#212121" 
        android:focusable="true"-->

</LinearLayout>
